--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -1574,20 +1574,22 @@ This work consists of the file  keys3.dtx
 %    \begin{macrocode}
 \cs_new:Nn \keys_set_cmd:nn {
   \keys_clear_properties:n {#1}
-  \cs_set:cNn { \c_keys_cs_prefix_tl #1 /._cmd:w } 1 {#2}
+  \cs_set:cpn { \c_keys_cs_prefix_tl #1 /._cmd:w } ##1 {#2}
 }
 \cs_new:Nn \keys_set_cmd:nx {
   \keys_clear_properties:n {#1}
-  \cs_set:cNx { \c_keys_cs_prefix_tl #1 /._cmd:w } 1 {#2}
+  \cs_set:cpx { \c_keys_cs_prefix_tl #1 /._cmd:w } ##1 {#2}
 }
 \cs_new:Nn \keys_set_cmd:nNn {
   \keys_clear_properties:n {#1}
-  \cs_set:cNn { \c_keys_cs_prefix_tl #1 /._cmd:w } #2 {#3}
+  \cs_generate_from_arg_count:cNnn { \c_keys_cs_prefix_tl #1 /._cmd:w } 
+      \cs_set:Npn #2 {#3}
   \keys_store:nn { #1 /._num_args_tl} {#2}
 }
 \cs_new:Nn \keys_set_cmd:nNx {
   \keys_clear_properties:n {#1}
-  \cs_set:cNx { \c_keys_cs_prefix_tl #1 /._cmd:w } #2 {#3}
+  \cs_generate_from_arg_count:cNnn { \c_keys_cs_prefix_tl #1 /._cmd:w } 
+      \cs_set:Npx #2 {#3}
   \keys_store:nn { #1 /._num_args_tl} {#2}
 }
 %    \end{macrocode}
@@ -1682,7 +1684,7 @@ This work consists of the file  keys3.dtx
 }
 \cs_new_nopar:Nn \keys_use_cmd_aux:nn {
   \tlist_if_empty:nTF {#2} {
-    \cs_set:NNn \keys_use_cmd_aux:w 0 {
+    \cs_set:Npn \keys_use_cmd_aux:w {
       \keys_use:n { #1 /._cmd:w }
     }
     \exp_after:wN \exp_after:wN \exp_after:wN \keys_use_cmd_aux:w 
