Tiny bug in error message handling

--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -1725,7 +1725,7 @@ This work consists of the file  keys3.dtx
   \msg_error:nnxx { keys } {#1} { \l_keys_current_key_full_tl } {#2}
 }
 \cs_new_protected_nopar:Nn \keys_error:n {
-  \msg_error:nnxx { keys } {#1} { \l_keys_current_key_full_tl }
+  \msg_error:nnx { keys } {#1} { \l_keys_current_key_full_tl }
 }
 %    \end{macrocode}
 %\end{macro}
