Updates to keep up with expl3

--- a/trunk/keys3opts2.dtx
+++ b/trunk/keys3opts2.dtx
@@ -1,5 +1,6 @@
 %\iffalse
 % !TEX program  = pdflatex
+% !TEX encoding = ISO-8859-1
 %<*internal>
 \iffalse
 %</internal>
@@ -117,15 +118,15 @@ This work consists of the file  keys3opts2.dtx
 %
 % The methods that \LaTeX3 will use to process package options are not
 % clear at the present time.  However, in order to fully test the
-% \textsf{expl3} bundle fully, it is useful to be able to work with
+% \pkg{expl3} bundle fully, it is useful to be able to work with
 % the \LaTeXe\ system but using \LaTeX3 methods as far as possible.
 %
-% The \textsf{keys3} package provides an experimental method for
-% managing key--value input using \textsf{expl3} syntax. It is
+% The \pkg{keys3} package provides an experimental method for
+% managing key--value input using \pkg{expl3} syntax. It is
 % self-contained and does not use any \LaTeXe methods. On the other
-% hand, \textsf{keys3opts2} is intended as a ``bridge'' between the
+% hand, \pkg{keys3opts2} is intended as a ``bridge'' between the
 % \LaTeXe\ kernel and \textsf{keys3}. It allows keys to be created
-% using \textsf{keys3} and processed by \LaTeXe\ as package or class
+% using \pkg{keys3} and processed by \LaTeXe\ as package or class
 % options.
 %
 %\subsection{functions}
@@ -154,7 +155,7 @@ This work consists of the file  keys3opts2.dtx
 %   \begin{syntax}
 %     "\keys_options_ltx_strip_eq:w" <option> "\q_stop"
 %   \end{syntax}
-%   Used to strip ``\texttt{=} '' out of options.
+%   Used to strip ``\texttt{=}'' out of options.
 % \end{function}
 %
 % \begin{variable}{\l_keys_options_ltx_clist}
@@ -163,11 +164,11 @@ This work consists of the file  keys3opts2.dtx
 %
 %\subsection{Implementation}
 %
-% Almost everything here is based heavily on \textsf{pgfopts}, which is
-% itself a port of the appropriate code from \textsf{kvoptions} to work
-% with \textsf{pgfkeys}.
+% Almost everything here is based heavily on \pkg{pgfopts}, which is
+% itself a port of the appropriate code from \pkg{kvoptions} to work
+% with \pkg{pgfkeys}.
 %
-% As this package is an add-on to \textsf{keys3}, the same internal
+% As this package is an add-on to \pkg{keys3}, the same internal
 % module name (|\keys_|) is used here as in the main package. The lead 
 % off as usual.
 %    \begin{macrocode}
@@ -189,14 +190,14 @@ This work consists of the file  keys3opts2.dtx
 % normal \LaTeX\ options is ignored. Here, the package insists a path
 % is given for the keys. First, a path may need to be added to the
 % argument given. The path we need to process is then stored in
-% \cs{l_keys_current_key_tlp}.
+% \cs{l_keys_current_key_tl}.
 %    \begin{macrocode}
-\cs_new:NNn \keys_options_ltx:n 1 {
-  \tlp_set:Nx \l_keys_current_key_tlp {#1}
-  \keys_path_add:N \l_keys_current_key_tlp
+\cs_new:Nn \keys_options_ltx:n {
+  \tl_set:Nx \l_keys_current_key_tl {#1}
+  \keys_path_add:N \l_keys_current_key_tl
   \clist_clear:N \l_keys_options_ltx_clist
   \cs_if_eq:NNTF \@currext \@clsextension {
-    \cs_if_free:cF { opt@ \@currname . \@currext }{
+    \cs_if_free:cF { opt@ \@currname . \@currext } {
       \clist_map_function:cN { opt@ \@currname . \@currext }
         \keys_options_ltx_cls:n
     }
@@ -204,7 +205,7 @@ This work consists of the file  keys3opts2.dtx
     \cs_if_free:NF \@classoptionslist {
       \clist_map_function:NN \@classoptionslist \keys_options_ltx_pkg:n
     }
-    \cs_if_free:cF { opt@ \@currname . \@currext }{
+    \cs_if_free:cF { opt@ \@currname . \@currext } {
       \exp_args:NNc \clist_concat:NNN \l_keys_options_ltx_clist
         { opt@ \@currname . \@currext } \l_keys_options_ltx_clist
     }
@@ -217,12 +218,11 @@ This work consists of the file  keys3opts2.dtx
 %\end{macro}
 %\begin{macro}{\keys_options_ltx_cls:n}
 % This macro checks if the current class option is a known key. To do
-% that, any ``\texttt{=}'' part has to be removed first. The code key is
-% checked for, hence the |/._cmd:w| part.
+% that, any ``\texttt{=}'' part has to be removed first.
 %    \begin{macrocode}
-\cs_new:NNn \keys_options_ltx_cls:n 1 {
-  \keys_if_cmd_really_exist:nTF {
-    \l_keys_current_key_tlp / \keys_options_ltx_strip_eq:w #1 = \q_stop
+\cs_new:Nn \keys_options_ltx_cls:n {
+  \keys_if_cmd_exist:nTF {
+    \l_keys_current_key_tl / \keys_options_ltx_strip_eq:w #1 = \q_stop
   }{
     \clist_put_right:Nn \l_keys_options_ltx_clist {#1}
   }{
@@ -232,17 +232,14 @@ This work consists of the file  keys3opts2.dtx
 %    \end{macrocode}
 %\end{macro}
 %\begin{macro}{\keys_options_ltx_pkg:n}
-% For packages, options need to be removed from the global list. At 
-% present, the \LaTeXe\ macro \cs{@removeelement} still needs to be 
-% used.
+% For packages, options need to be removed from the global list. 
 %    \begin{macrocode}
-\cs_new:NNn \keys_options_ltx_pkg:n 1 {
+\cs_new:Nn \keys_options_ltx_pkg:n {
   \keys_if_cmd_really_exist:nT {
-    \l_keys_current_key_tlp / \keys_options_ltx_strip_eq:w #1 = \q_stop
+    \l_keys_current_key_tl / \keys_options_ltx_strip_eq:w #1 = \q_stop
   }{
     \clist_put_right:Nn \l_keys_options_ltx_clist {#1}
-    \exp_args:Nnx \@removeelement {#1} \@unusedoptionlist
-      \@unusedoptionlist
+    \clist_remove_element:Nn \@unusedoptionlist {#1}
   }
 }
 %    \end{macrocode}
